# bbscrap

./: .gitignore  README.md  pyproject.toml  test_corpo.xlsx
app/: main.py
app/navegacao/: funcoes.py  login.py  nav_cartao.py  nav_contas.py
bbscrap/: __init__.py  __main__.py  cli.py  gui_tk.py  main.py  main.txt  test.py
bbscrap/navegacao/: __init__.py  chrome_driver.py  dependente.py  lerofx.py  login.py  nav_cartao.py  nav_contas.py  nav_corrente.py  nav_pagina.py  nav_poupanca.py  nome_arquivo.py
bbscrap/tratamento/: altera_variaveis.py  chave_unica.py  cria_variaveis.py  lerofx.py  main_tratamento.py  memo_divisao.py
bbscrap/utils/: __init__.py  arquivo.py  sistema.py
tests/: conftest.py  test_cartao.py  test_corrente.py  test_dependente.py  test_driver.py  test_lerofx.py  test_login.py  test_poupanca.py
tests/auxiliar/: acessobb.py  baixa_extratos.py  exemplo.ofx  lerofx.py  test.py
webscrapp_bb/: acesso_bb.py
webscrapp_bb/helpers/: __init__.py  append.py  arquivo.py  data_functions.py
webscrapp_bb/lib/: funcoes.py  nav_contas.py
webscrapp_bb/navegacao/: login.py  nav_cartao.py
