[tool.poetry]
name = "bb-webscrapp"
version = "0.1.0"
description = "Baixa extatos bancários do Banco do Brasil"
authors = ["Vinicius Maciel"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
