[tool.poetry]
name = "bbscrap"
version = "7.0.1"
description = "Baixa extatos bancários do Banco do Brasil"
authors = ["Vinicius Maciel"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
selenium = "^4.1.2"
ofxparse = "^0.21"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.2"
openpyxl = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bbscrap = "bbscrap.cli:cli"